Fix color contrast issue with on-hover link tabs

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -852,7 +852,7 @@ h1
   color: #5D5D50
 
 .highlighted2
-  background-color: #F9EDBE
+  background-color: cadetblue
   box-shadow: 6px 6px 5px black
   outline-color: blue
   cursor: pointer
